@@ -66,7 +66,3 @@ export {
 export {
     includedIn,
 } from './array/predicate';
-
-export {
-    flipped,
-} from './array/record';
